fixed extra space issue below header on edit-item page

--- a/app/styles/templates/item/_index.scss
+++ b/app/styles/templates/item/_index.scss
@@ -1,5 +1,8 @@
-.item-details {
+.item-messages {
   padding-top: 2.8rem;
+}
+
+.item-details {
 
   .ellipsis {
     margin-bottom: 0;
